; ModuleID = '/home/carl/AnghaBench/systemd/src/tmpfiles/extr_tmpfiles.c_takes_ownership.c'
source_filename = "/home/carl/AnghaBench/systemd/src/tmpfiles/extr_tmpfiles.c_takes_ownership.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CREATE_FILE = common dso_local global i32 0, align 4
@TRUNCATE_FILE = common dso_local global i32 0, align 4
@CREATE_DIRECTORY = common dso_local global i32 0, align 4
@EMPTY_DIRECTORY = common dso_local global i32 0, align 4
@TRUNCATE_DIRECTORY = common dso_local global i32 0, align 4
@CREATE_SUBVOLUME = common dso_local global i32 0, align 4
@CREATE_SUBVOLUME_INHERIT_QUOTA = common dso_local global i32 0, align 4
@CREATE_SUBVOLUME_NEW_QUOTA = common dso_local global i32 0, align 4
@CREATE_FIFO = common dso_local global i32 0, align 4
@CREATE_SYMLINK = common dso_local global i32 0, align 4
@CREATE_CHAR_DEVICE = common dso_local global i32 0, align 4
@CREATE_BLOCK_DEVICE = common dso_local global i32 0, align 4
@COPY_FILES = common dso_local global i32 0, align 4
@WRITE_FILE = common dso_local global i32 0, align 4
@IGNORE_PATH = common dso_local global i32 0, align 4
@IGNORE_DIRECTORY_PATH = common dso_local global i32 0, align 4
@REMOVE_PATH = common dso_local global i32 0, align 4
@RECURSIVE_REMOVE_PATH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @takes_ownership to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @takes_ownership(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @CREATE_FILE, align 4
  %5 = load i32, i32* @TRUNCATE_FILE, align 4
  %6 = load i32, i32* @CREATE_DIRECTORY, align 4
  %7 = load i32, i32* @EMPTY_DIRECTORY, align 4
  %8 = load i32, i32* @TRUNCATE_DIRECTORY, align 4
  %9 = load i32, i32* @CREATE_SUBVOLUME, align 4
  %10 = load i32, i32* @CREATE_SUBVOLUME_INHERIT_QUOTA, align 4
  %11 = load i32, i32* @CREATE_SUBVOLUME_NEW_QUOTA, align 4
  %12 = load i32, i32* @CREATE_FIFO, align 4
  %13 = load i32, i32* @CREATE_SYMLINK, align 4
  %14 = load i32, i32* @CREATE_CHAR_DEVICE, align 4
  %15 = load i32, i32* @CREATE_BLOCK_DEVICE, align 4
  %16 = load i32, i32* @COPY_FILES, align 4
  %17 = load i32, i32* @WRITE_FILE, align 4
  %18 = load i32, i32* @IGNORE_PATH, align 4
  %19 = load i32, i32* @IGNORE_DIRECTORY_PATH, align 4
  %20 = load i32, i32* @REMOVE_PATH, align 4
  %21 = load i32, i32* @RECURSIVE_REMOVE_PATH, align 4
  %22 = call i32 @IN_SET(i32 %3, i32 %4, i32 %5, i32 %6, i32 %7, i32 %8, i32 %9, i32 %10, i32 %11, i32 %12, i32 %13, i32 %14, i32 %15, i32 %16, i32 %17, i32 %18, i32 %19, i32 %20, i32 %21)
  ret i32 %22
}

declare dso_local i32 @IN_SET(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
